# parallel-algorithms

./: .gitignore  CMakeLists.txt  README.md
hw-1/: CMakeLists.txt  Graph.ipynb  hw-1.cpp  hw1.cpp  run.sh
hw-2/: CMakeLists.txt  Graph.ipynb  hw-2.cpp
sem-1/: CMakeLists.txt  main.cpp
